--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+<body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js" integrity="sha512-aNMyYYxdIxIaot0Y1/PLuEu3eipGCmsEUBrUq+7aVyPGMFH8z0eTP0tkqAvv34fzN6z+201d3T8HPb1svWSKHQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <button id='runaway-btn'>Click Me &#129315;</button>
 <style>
   * {
@@ -49,3 +52,5 @@ const getRandomNumber = (num) => {
   return Math.floor(Math.random() * (num + 1));
 };
 </script>
+</body>
+</html>
