--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg
 
 </section>
 
-<section class="pt-36 flex justify-center" id="contact">
+<section class="-mt-28 pt-36 flex justify-center" id="contact">
     <div class=" mb-20 w-[min(100%,48rem)]  py-8 bg-gray-100 rounded-2xl flex flex-col justify-center items-center">
 
         <div class="w-[min(100%,38rem)] text-center" style="opacity: 1;">
