--- a/index.html
+++ b/index.html
@@ -634,8 +634,8 @@ h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg
             <p class="text-gray-700 -mt-6 ">Please contact me directly at<!-- --> <a class="underline"
                                                                                      href="mailto:hasanrakib455@gmail.com">hasanrakib455@gmail.com</a>
                 <!-- -->or through this form.</p>
-            <form action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
-                  class="mt-10 flex flex-col dark:text-black">
+            <form action="https://formspree.io/f/mwpvbeej" method="POST"
+                   class="mt-10 flex flex-col dark:text-black">
                 <input class="h-14 px-4 rounded-lg borderBlack dark:bg-white dark:bg-opacity-80 dark:focus:bg-opacity-100 transition-all dark:outline-none"
                        maxlength="500" name="senderEmail" placeholder="Your email" required="" type="email">
                 <textarea
