--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body class="bg-gray-200">
 <!-- Navbar -->
-<nav class="z-[9999] fixed flex flex-row justify-center p-1.5 font-semibold gap-5 top-0 left-1/2
+<nav class="z-[999] fixed flex flex-row justify-center p-1.5 font-semibold gap-5 top-0 left-1/2
 h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg-opacity-80 shadow-lg
  shadow-black/[0.03] backdrop-blur-[0.5rem] sm:top-6 sm:h-[3.25rem] sm:w-[36rem] sm:rounded-full
   dark:bg-gray-950 dark:border-black/40 dark:bg-opacity-75"
@@ -675,5 +675,145 @@ h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg
         </p>
     </footer>
 </div>
+
+<!-- Floating Button -->
+<!-- Floating Button -->
+<button id="taxCalculatorButton" class="attention-grab fixed right-8 top-1/2 transform -translate-y-1/2 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 hover:rounded-xl transition-all duration-500 ease-in-out group">
+    <!-- Calculator Icon -->
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 15.75V18m-7.5-6.75h.008v.008H8.25v-.008zm0 2.25h.008v.008H8.25V13.5zm0 2.25h.008v.008H8.25v-.008zm0 2.25h.008v.008H8.25V18zm2.498-6.75h.007v.008h-.007v-.008zm0 2.25h.007v.008h-.007V13.5zm0 2.25h.007v.008h-.007v-.008zm0 2.25h.007v.008h-.007V18zm2.504-6.75h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V13.5zm0 2.25h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V18zm2.498-6.75h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V13.5zM8.25 6h7.5v2.25h-7.5V6zM12 2.25c-1.892 0-3.633.806-4.875 2.125a6.94 6.94 0 0 0-1.125 1.125V3a.75.75 0 0 0-1.5 0v2.25H3a.75.75 0 0 0 0 1.5h2.25V9a.75.75 0 0 0 1.5 0V6.75h2.25a.75.75 0 0 0 0-1.5H6.75V3a.75.75 0 0 0-1.5 0v2.25c0 .398.158.78.44 1.06L4.5 6.75a6.94 6.94 0 0 0 1.125 1.125A6.94 6.94 0 0 0 6.75 9H12c1.892 0 3.633-.806 4.875-2.125A6.94 6.94 0 0 0 18 6.75V3a.75.75 0 0 0-1.5 0v2.25H14.25a.75.75 0 0 0 0 1.5H16.5V9a.75.75 0 0 0 1.5 0V6.75H21a.75.75 0 0 0 0-1.5h-2.25V3a.75.75 0 0 0-1.5 0v2.25c0 .398-.158.78-.44 1.06L19.5 6.75a6.94 6.94 0 0 0-1.125-1.125A6.94 6.94 0 0 0 16.5 3H12z" />
+    </svg>
+    <!-- Tooltip -->
+    <span class="absolute right-16 top-1/2 transform -translate-y-1/2 bg-gray-800 text-white text-sm px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+        BD Tax Calculator
+    </span>
+</button>
+
+<!-- Popup Modal -->
+<div id="taxCalculatorModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden " style="z-index: 9999">
+    <div class="bg-white shadow-xl rounded-lg p-6 w-full max-w-lg border border-gray-300 sm:w-4/5 md:w-3/5 lg:w-2/5">
+        <h1 class="text-2xl font-semibold text-center text-gray-700 mb-4">
+            <span title="Bangladesh">BD</span> Tax Calculator
+        </h1>
+
+        <div class="space-y-4">
+            <div>
+                <label class="block text-gray-600 font-medium">Monthly Income:</label>
+                <input type="number" id="monthlyIncome" class="border p-2 rounded w-full focus:outline-none focus:ring-2 focus:ring-gray-500" placeholder="Enter Income">
+            </div>
+            <div>
+                <label class="block text-gray-600 font-medium">Yearly Bonus:</label>
+                <input type="number" id="yearlyBonus" class="border p-2 rounded w-full focus:outline-none focus:ring-2 focus:ring-gray-500" placeholder="Enter Bonus">
+            </div>
+        </div>
+
+        <table class="w-full mt-6 border rounded-lg overflow-hidden text-sm">
+            <tbody>
+            <tr class="bg-gray-700 text-white font-semibold">
+                <td class="p-2">Total Income (Yearly <span id="yearlyTotal"></span> + Bonus<span id="bonusTotal"></span>)</td>
+                <td class="p-2 text-right" id="totalIncome">0.00</td>
+            </tr>
+            <tr class="bg-gray-100">
+                <td class="p-2">Less: 450,000 or 1/3 of Total (Lower One)</td>
+                <td class="p-2 text-right" id="lessAmount">0.00</td>
+            </tr>
+            <tr class="bg-gray-700 text-white font-semibold">
+                <td class="p-2">Taxable Income</td>
+                <td class="p-2 text-right" id="taxableIncome">0.00</td>
+            </tr>
+            </tbody>
+        </table>
+
+        <h2 class="text-lg font-semibold mt-4 text-gray-700">Tax Breakdown</h2>
+        <table class="w-full border rounded-lg overflow-hidden text-sm">
+            <tbody>
+            <tr><td class="p-2">Up to 350,000 @ 0%</td><td class="p-2 text-right" id="tax1">0.00</td></tr>
+            <tr class="bg-gray-100"><td class="p-2">Next 100,000 @ 5%</td><td class="p-2 text-right" id="tax2">0.00</td></tr>
+            <tr><td class="p-2">Next 400,000 @ 10%</td><td class="p-2 text-right" id="tax3">0.00</td></tr>
+            <tr class="bg-gray-100"><td class="p-2">Next 500,000 @ 15%</td><td class="p-2 text-right" id="tax4">0.00</td></tr>
+            <tr><td class="p-2">Next 500,000 @ 20%</td><td class="p-2 text-right" id="tax5">0.00</td></tr>
+            <tr class="bg-gray-100"><td class="p-2">Remaining @ 25%</td><td class="p-2 text-right" id="tax6">0.00</td></tr>
+            </tbody>
+        </table>
+
+        <div class="bg-gray-700 text-white p-3 mt-4 rounded-md text-center text-lg font-semibold">
+            <p>Total Payable Tax (Yearly): <span id="payableTax">0.00</span></p>
+            <p>Total Payable Tax (Monthly): <span id="taxPerMonth">0.00</span></p>
+        </div>
+    </div>
+</div>
+
+<style>
+    @keyframes pulse {
+        0% { transform: scale(1); opacity: 1; }
+        50% { transform: scale(1.1); opacity: 0.8; }
+        100% { transform: scale(1); opacity: 1; }
+    }
+
+    .attention-grab {
+        animation: pulse 1.5s ease-in-out infinite;
+    }
+</style>
+<script>
+    document.getElementById('monthlyIncome').addEventListener('input', calculateTax);
+    document.getElementById('yearlyBonus').addEventListener('input', calculateTax);
+
+    function calculateTax() {
+        const monthlyIncome = parseFloat(document.getElementById('monthlyIncome').value) || 0;
+        const yearlyBonus = parseFloat(document.getElementById('yearlyBonus').value) || 0;
+        const yearlyTotal = monthlyIncome * 12;
+
+        const totalIncome = yearlyTotal  + yearlyBonus;
+        const lessAmount = Math.min(totalIncome / 3, 450000);
+        const taxableIncome = totalIncome - lessAmount;
+        document.getElementById('yearlyTotal').textContent = yearlyTotal + " ";
+        document.getElementById('bonusTotal').textContent = " " + yearlyBonus;
+
+        document.getElementById('totalIncome').textContent = totalIncome.toFixed(2);
+        document.getElementById('lessAmount').textContent = lessAmount.toFixed(2);
+        document.getElementById('taxableIncome').textContent = taxableIncome.toFixed(2);
+
+        const slabs = [
+            { limit: 350000, rate: 0.0 },
+            { limit: 100000, rate: 0.05 },
+            { limit: 400000, rate: 0.1 },
+            { limit: 500000, rate: 0.15 },
+            { limit: 500000, rate: 0.2 },
+            { limit: Infinity, rate: 0.25 }
+        ];
+
+        let remainingIncome = taxableIncome;
+        let totalTax = 0;
+
+        slabs.forEach((slab, index) => {
+            const balance = Math.min(remainingIncome, slab.limit);
+            const tax = balance * slab.rate;
+            remainingIncome -= balance;
+            totalTax += tax;
+
+            document.getElementById(`tax${index + 1}`).textContent = tax.toFixed(2);
+        });
+
+        document.getElementById('payableTax').textContent = totalTax.toFixed(2);
+        document.getElementById('taxPerMonth').textContent = (totalTax / 12).toFixed(2);
+    }
+
+
+    // Modal Logic
+    const taxCalculatorButton = document.getElementById('taxCalculatorButton');
+    const taxCalculatorModal = document.getElementById('taxCalculatorModal');
+    const modalContent = taxCalculatorModal.querySelector('div'); // The modal content div
+
+    taxCalculatorButton.addEventListener('click', () => {
+        taxCalculatorModal.classList.remove('hidden');
+    });
+
+    // Close modal when clicking outside the modal content
+    window.addEventListener('click', (event) => {
+        if (event.target === taxCalculatorModal && !modalContent.contains(event.target)) {
+            taxCalculatorModal.classList.add('hidden');
+        }
+    });
+</script>
 </body>
 </html>
