--- a/index.html
+++ b/index.html
@@ -693,17 +693,19 @@ h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg
 <div id="taxCalculatorModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden " style="z-index: 9999">
     <div class="bg-white shadow-xl rounded-lg p-6 w-full max-w-lg border border-gray-300 sm:w-4/5 md:w-3/5 lg:w-2/5">
         <!-- Modal Header with Close Button -->
-        <div class="flex justify-between items-center mb-4">
-            <h1 class="text-2xl font-semibold text-gray-700">
+        <!-- Modal Header with Close Button -->
+        <div class="flex justify-center items-center relative mb-4">
+            <h1 class="text-2xl font-semibold text-gray-700 text-center">
                 <span title="Bangladesh">BD</span> Tax Calculator
             </h1>
             <!-- Close Button -->
-            <button id="closeModal" class="text-gray-500 hover:text-gray-700 focus:outline-none">
+            <button id="closeModal" class="absolute right-0 text-gray-500 hover:text-gray-700 focus:outline-none">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                 </svg>
             </button>
         </div>
+
 
         <div class="space-y-4">
             <div>
