--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@ h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg
         <!-- Modal Header with Close Button -->
         <div class="flex justify-center items-center relative mb-4">
             <h1 class="text-2xl font-semibold text-gray-700 text-center">
-                <span title="Bangladesh">BD</span> Tax Calculator
+                <span title="Bangladesh">BD</span> Salary Tax Calculator
             </h1>
             <!-- Close Button -->
             <button id="closeModal" class="absolute right-0 text-gray-500 hover:text-gray-700 focus:outline-none">
