--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <script src="index.js" type="text/javascript"></script>
     <link href="index.css" rel="stylesheet">
-
+    <link rel="icon" type="image/x-icon" href="/resources/image/logo/portfolio-logo.png">
+    
     <title>Rakib's Portfolio</title>
 </head>
 <body class="bg-gray-200">
@@ -903,4 +904,5 @@ h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg
     });
 </script>
 </body>
+
 </html>
