--- a/index.html
+++ b/index.html
@@ -857,6 +857,7 @@ h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg
     function createTexTableBody() {
 
             const tbody = document.getElementById("taxTableBody");
+            tbody.innerHTML = "";
 
             let previousLimit = 0;
 
@@ -906,3 +907,4 @@ h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg
 </body>
 
 </html>
+
