--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta name="description" content="Rakib's portfolio - Java & Spring Boot Developer">
+    <meta name="description" content="Rakib - Java & Spring Boot Developer">
     <meta name="google-site-verification" content="Rkdu0wSQmtQFivOPsJTkf_NjWRhG1fpoSEMrHkopyfg" />
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -18,7 +18,7 @@
     <link href="index.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/resources/image/logo/portfolio-logo.png">
     
-    <title>Rakib's Portfolio</title>
+    <title>Rakibul Hasan | Java Software Engineer</title>
 </head>
 <body class="bg-gray-200">
 <!-- Navbar -->
@@ -60,7 +60,7 @@ h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg
         <h1 class="mb-10 mt-4 px-4 text-2xl font-medium !leading-[1.5] sm:text-4xl"
             style="opacity: 1; transform: none;">
             <span class="font-bold">Hello, I'm Rakib.</span> I'm a<!-- -->
-            <span class="font-bold">Software Engineer</span> with<!-- -->
+            <span class="font-bold"> Software Engineer</span> with<!-- -->
             <span class="font-bold">2+ years</span> of experience. I enjoy building<!-- -->
             <span class="italic">sites, apps &amp; play with Full Stack Development using Spring Framework, Angular etc.</span>
             My primary focus is on <span class="underline">Java</span>.</h1>
@@ -907,4 +907,5 @@ h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg
 </body>
 
 </html>
+
 
