--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@ dark:bg-gray-950 dark:border-black/40 dark:bg-opacity-75 border border-white bor
                 </div>
 
                 <!-- left timeline -->
-                <div class="sm:pt-32 mb-8 gap-y-8 sm:gap-y-0 flex flex-col sm:flex-row justify-between flex-row-reverse items-center w-full left-timeline">
-                    <div class="order-1 sm:w-5/12">
+                <div class="sm:pt-32 mb-8 gap-y-8 sm:gap-y-0 flex flex-col justify-between sm:flex-row-reverse items-center w-full left-timeline">
+                    <div class="sm:order-1 sm:w-5/12">
                         <div class="text-left opacity-65 font-semibold ">2022 Nov - 2024 Feb</div>
                     </div>
                     <div class="z-20 flex items-center order-1 bg-gray-800 shadow-xl  rounded-full">
@@ -626,42 +626,6 @@ dark:bg-gray-950 dark:border-black/40 dark:bg-opacity-75 border border-white bor
                     </div>
                 </div>
 
-                <!-- right timeline -->
-                <div class="hidden sm:block pt-32 sm:mb-8 flex justify-between items-center w-full right-timeline">
-                    <div class="order-1 w-5/12">
-                        <div class="text-right opacity-65 font-semibold ">2020 Jun - 2022 Mar</div>
-                    </div>
-                    <div class="z-20 flex items-center order-1 bg-gray-800 shadow-xl  rounded-full">
-                        <h1 class="mx-auto font-semibold text-lg text-white">
-                            <div class=" rounded-full border-[0.0px] border-slate-600 ring-[1px] ring-gray-400 shadow-xl drop-shadow-lg ring-offset-8
-                             ring-offset-slate-50  ">
-                                <img class="rounded-full w-14 h-14"
-                                     src="resources/image/logo/seulogo.png">
-                            </div>
-
-                        </h1>
-                    </div>
-                    <div class="order-1 w-5/12 px-6 py-4 -mb-48 ">
-
-                        <div class="rounded-r-2xl rounded-l-xl"
-                             style="background:#f3f4f6;box-shadow:none;border:1px solid rgba(0, 0, 0, 0.05);
-     text-align:left;padding:1.3rem 2rem">
-                            <div class="vertical-timeline-element-content-arrow"
-                                 style="border-right:0.4rem solid #9ca3af"></div>
-                            <h3 class="font-semibold capitalize">Batch Representative, CSE Dept.</h3>
-                            <p class="font-normal !mt-0">Southeast University, Banani, Dhaka</p>
-                            <p class="!mt-1 !font-normal text-gray-600">
-                                As a batch representative, I played a key role in fostering unity and support within
-                                my group. Serving as the main point of contact, I addressed member concerns,
-                                organized activities, and facilitated communication. From coordinating programs
-                                to resolving conflicts and building connections, my focus was on ensuring the
-                                well-being and cohesion of the batch community through proactive engagement and
-                                effective communication.
-                            </p>
-                        </div>
-
-                    </div>
-                </div>
 
             </div>
         </div>
