--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ dark:bg-gray-950 dark:border-black/40 dark:bg-opacity-75 border border-white bor
             </a>
 
             <a class="group bg-white px-7 py-3 flex items-center gap-2 rounded-full outline-none focus:scale-110 hover:scale-110 active:scale-105 transition cursor-pointer border-[1px] border-slate-400"
-               download="" href="resources/pdf/Rakibul_Hasan_Resume.pdf">Download CV<!-- -->
+               download="" href="resources/pdf/Rakibul_Hasan_Resume.pdf">Resume<!-- -->
                 <svg aria-hidden="true" class="opacity-60 group-hover:translate-y-1 transition" fill="currentColor"
                      height="1em" stroke="currentColor"
                      stroke-width="0" viewBox="0 0 20 20" width="1em"
