updated tax calculator button

--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ dark:bg-gray-950 dark:border-black/40 dark:bg-opacity-75 border border-white bor
 
 
 <!-- Floating Button -->
-<button id="taxCalculatorButton" class="attention-grab fixed right-8 top-1/2 transform -translate-y-1/2
+<button id="taxCalculatorButton" class="attention-grab fixed right-8 bottom-[10%]
     bg-gradient-to-r from-green-500 to-green-700 text-white p-4 rounded-full shadow-2xl
     hover:bg-gradient-to-r hover:from-green-600 hover:to-green-800 hover:scale-110 hover:shadow-lg
     transition-all duration-500 ease-in-out group animate-pulse">
